kubernetes/apps/ai/open-webui/app/deployment.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/apps/deployment_v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  namespace: ai
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: open-webui
      app.kubernetes.io/instance: open-webui
      app.kubernetes.io/controller: open-webui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: open-webui
        app.kubernetes.io/instance: open-webui
        app.kubernetes.io/controller: open-webui
    spec:
      containers:
        - name: app
          image: ghcr.io/open-webui/open-webui:v0.11.4
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 1
              memory: 500Mi
            limits:
              cpu: 2
              memory: 4Gi
          volumeMounts:
            - name: config
              mountPath: /app/backend/data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: open-webui
